--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.27",
+    "@vicons/antd": "^0.12.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -26,8 +27,11 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "less": "^4.1.2",
+    "naive-ui": "^2.29.0",
     "prettier": "^2.5.1",
     "typescript": "~4.6.3",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
   },
