--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "less": "^4.1.2",
     "naive-ui": "^2.29.0",
+    "pinia-plugin-persist": "^1.0.0",
     "prettier": "^2.5.1",
     "typescript": "~4.6.3",
     "unplugin-vue-components": "^0.19.6",
