--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@vueuse/core": "^8.6.0",
     "axios": "^0.27.2",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
