--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.13",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
@@ -32,7 +33,6 @@
     "eslint-plugin-vue": "^8.2.0",
     "less": "^4.1.2",
     "naive-ui": "^2.29.0",
-    "pinia-plugin-persist": "^1.0.0",
     "prettier": "^2.5.1",
     "typescript": "~4.6.3",
     "unplugin-vue-components": "^0.19.6",
