--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"],
-    },
-    "types": [
-      "pinia-plugin-persist"
-    ]
+      "@/*": ["./src/*"]
+    }
   },
 
   "references": [
